# src/main/java/com/sanvalero/toastsapi/model/Menu.java
@@ -1,15 +1,12 @@
 package com.sanvalero.toastsapi.model;
 
 import java.time.LocalDate;
-import java.util.List;
 
-import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.OneToMany;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
 
@@ -33,6 +30,6 @@ public class Menu {
     @Column
     private float punctuation;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "menu")
-    private List<Product> products;
+    // @OneToMany(cascade = CascadeType.ALL, mappedBy = "menu")
+    // private List<Product> products;
 }
