# src/main/java/com/sanvalero/toastsapi/model/UserModel.java
@@ -1,15 +1,12 @@
 package com.sanvalero.toastsapi.model;
 
 import java.time.LocalDate;
-import java.util.List;
 
-import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.OneToMany;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
 
@@ -22,10 +19,10 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 @Data
-@NoArgsConstructor
 @AllArgsConstructor
+@NoArgsConstructor
 @Entity(name = "users")
-public class User {
+public class UserModel {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -53,8 +50,8 @@ public class User {
     @Column(name = "publications_number")
     private int publicationsNumber;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "user")
-    private List<Publication> publications;
+    // @OneToMany(cascade = CascadeType.ALL, mappedBy = "user")
+    // private List<Publication> publications;
 
     @Bean
     public static PasswordEncoder encoder() {
